# tag-injector

./: Cargo.toml  LICENSE  README.md  config.toml
src/: conf.rs  inject.rs  main.rs  template.rs
templates/: tagging_xmp.stpl  tags.stpl
