[package]
name = "tag-injector"
version = "0.1.0"
edition = "2021"

[dependencies]
sailfish = "0.9.0"
regex = "1.11.1"
toml = "0.8.19"
argh = "0.1.12"
walkdir = "2.5.0"
md-5 = "0.10.6"
colored = "2.1.0"
serde_regex = "1.1.0"

[dependencies.reqwest]
version = "0.12.9"
features = [
  "blocking",
  "gzip",
]

[dependencies.xmp_toolkit]
version = "1.9.2"
features = [
  "crt_static"
]

[dependencies.serde]
version = "1.0.216"
features = [
  "derive"
]
